--- a/app/src/main/res/layout/fragment_credito_directo_pago.xml
+++ b/app/src/main/res/layout/fragment_credito_directo_pago.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.inlanet.cateoncook.Fragments.FormaPagoFragment"
-    android:id="@+id/fragment_financiamiento_root"
+    tools:context="net.inlanet.cateoncook.Fragments.CreditoDirectoPagoFragment"
+    android:id="@+id/fragment_credito_directo_root"
     android:background="@android:color/background_light">
 
     <ScrollView
@@ -19,68 +19,6 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp">
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingBottom="@dimen/activity_vertical_margin">
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spnrTarjetas"
-                    android:layout_weight="2" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spnrCuotas"
-                    android:layout_weight="3" />
-
-            </LinearLayout>
-
-            <TextView
-                android:text="Ingrese un monto solo si desea agregar efectivo*"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@android:color/holo_red_dark" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="@dimen/activity_vertical_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ingrese Efectivo"
-                    android:layout_gravity="center_vertical" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:hint="0.00"
-                    android:ems="5"
-                    android:id="@+id/tvEfectivo"
-                    android:textAlignment="textEnd"
-                    android:layout_gravity="end"/>
-
-                <Button
-                    android:text="Generar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/btnGenerarPago"
-                    android:layout_gravity="end"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="10sp" />
-
-            </LinearLayout>
-
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -90,32 +28,21 @@
                 android:useDefaultMargins="true">
 
                 <TextView
-                    android:text="Consumos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowSpan="2"
-                    android:layout_gravity="center_vertical" />
-
-                <TextView
-                    android:text="Tarifa 12%"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="center_vertical"
+                    android:text="Precio de Compra" />
 
                 <TextView
                     android:text="US$"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvConsumos"
+                    android:id="@+id/tvSubTotalConsumos"
+                    android:layout_rowSpan="2"
                     android:layout_gravity="right|center_vertical" />
 
-                <TextView
-                    android:text="Tarifa 0%"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
             </GridLayout>
 
             <GridLayout
@@ -127,20 +54,20 @@
                 android:useDefaultMargins="true">
 
                 <TextView
-                    android:text="SubTotal Consumos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowSpan="2"
                     android:layout_columnSpan="2"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    android:text="Costo de Despacho y Manejo" />
 
                 <TextView
-                    android:text="US$"
+                    android:id="@+id/tvCostoDespacho"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvSubTotalConsumos"
                     android:layout_rowSpan="2"
-                    android:layout_gravity="right|center_vertical" />
+                    android:layout_gravity="right|center_vertical"
+                    android:text="---" />
 
             </GridLayout>
 
@@ -179,12 +106,12 @@
                 android:useDefaultMargins="true">
 
                 <TextView
-                    android:text="Total Consumos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowSpan="2"
                     android:layout_columnSpan="2"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:text="Precio Total" />
 
                 <TextView
                     android:text="US$"
@@ -205,19 +132,19 @@
                 android:useDefaultMargins="true">
 
                 <TextView
-                    android:text="Interes de Financiamiento Dif."
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowSpan="2"
                     android:layout_columnSpan="2"
                     android:layout_gravity="center_horizontal"
-                    android:breakStrategy="balanced" />
+                    android:breakStrategy="balanced"
+                    android:text="Deposito pagado hoy" />
 
                 <TextView
                     android:text="US$"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvInteresFinanciamientoDiferido"
+                    android:id="@+id/tvEfectivo"
                     android:layout_rowSpan="2"
                     android:layout_gravity="right|center_vertical" />
 
@@ -232,51 +159,99 @@
                 android:useDefaultMargins="true">
 
                 <TextView
-                    android:text="Total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowSpan="2"
                     android:layout_columnSpan="2"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:text="Fecha de pago del deposito adicional" />
 
                 <TextView
-                    android:text="US$"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvTotal"
                     android:layout_rowSpan="2"
-                    android:layout_gravity="right|center_vertical" />
+                    android:layout_gravity="right|center_vertical"
+                    android:text="---" />
 
             </GridLayout>
 
-            <TextView
-                android:text="Con factor al: 0.00%"
+            <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvFactor"
-                android:layout_gravity="center_vertical" />
-
-            <TextView
-                android:text="# Invesiones de $ 0.00"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvResumenCuotas"
-                android:layout_gravity="center_vertical" />
-
-            <TextView
-                android:text="Interés Mensual de 0.00%"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvInteresMensual"
-                android:layout_gravity="center_vertical" />
-
-            <Button
-                android:text="Ver Códigos de Establecimiento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnEstablecimiento"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textColor="@android:color/background_light" />
+                android:columnCount="3"
+                android:rowCount="2"
+                android:useDefaultMargins="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Saldo a financiar" />
+
+                <TextView
+                    android:id="@+id/tvSaldoAFinanciar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="US$" />
+
+            </GridLayout>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:columnCount="3"
+                android:rowCount="2"
+                android:useDefaultMargins="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Tasa de interés máxima a la fecha vigente" />
+
+                <TextView
+                    android:id="@+id/tvInteresMaximo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="US$" />
+
+            </GridLayout>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:columnCount="3"
+                android:rowCount="2"
+                android:useDefaultMargins="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Pago Mínimo" />
+
+                <TextView
+                    android:id="@+id/tvPagoMinimo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_rowSpan="2"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="US$" />
+
+            </GridLayout>
 
         </LinearLayout>
     </ScrollView>
