--- a/app/src/main/res/layout/fragment_financiamiento_item_list.xml
+++ b/app/src/main/res/layout/fragment_financiamiento_item_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
@@ -9,9 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
-        android:textStyle="normal|bold"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textStyle="normal|bold" />
 
     <TextView
         android:id="@+id/tvTexto"
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textSize="18sp"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="normal|bold"/>
 
 </LinearLayout>
