--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,8 @@
     <!-- Base application theme. -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@drawable/fondo_splash</item>
+        <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <!-- Base application theme. -->
