--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_login"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
-    tools:context="net.inlanet.cateoncook.Activities.LoginActivity"
-    android:background="@drawable/intro_fondo"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:padding="@dimen/activity_horizontal_margin"
+    tools:context="net.inlanet.cateoncook.Activities.LoginActivity">
 
     <ScrollView
         android:id="@+id/login_form"
@@ -18,32 +19,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/roudend_login"
             android:padding="20dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp">
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                app:srcCompat="@drawable/logo_next_es"
+                tools:srcCompat="@drawable/logo_next_es" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:background="@android:color/background_light"
                 android:layout_height="52dp"
-                android:divider="@color/accent">
+                android:background="@android:color/background_light"
+                android:divider="@android:drawable/bottom_bar">
 
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/background_light"
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:background="@android:color/background_light" />
+                    android:textColorHighlight="@color/colorPrimaryDark"
+                    android:textColorLink="@color/colorPrimaryDark" />
 
             </android.support.design.widget.TextInputLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:background="@color/colorAccent"
-                android:layout_height="2dp" />
+                android:layout_height="2dp"
+                android:background="@color/colorAccent" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -55,13 +66,15 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/background_light"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:background="@android:color/background_light" />
+                    android:textColorHighlight="@color/colorPrimaryDark"
+                    android:textColorLink="@color/colorPrimaryDark" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -70,11 +83,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="20dp"
+                android:background="@color/colorPrimaryDark"
                 android:text="@string/action_sign_in_short"
-                android:textStyle="bold"
-                android:background="@color/color_button_login"
+                android:textAllCaps="false"
                 android:textColor="@android:color/background_light"
-                android:textAllCaps="false" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/logo_rp_es"
+                tools:srcCompat="@drawable/logo_rp_es" />
 
         </LinearLayout>
     </ScrollView>
