--- a/app/src/main/res/layout/fragment_credito_directo_financiamiento.xml
+++ b/app/src/main/res/layout/fragment_credito_directo_financiamiento.xml
@@ -39,7 +39,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvFinanciamientos"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:layoutManager="LinearLayoutManager"
